Fixing text overflow issue on accordions

--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -399,8 +399,6 @@ h2{
 
 @media (max-width:900px){
     .membershipFaq {
-        overflow:scroll;
-        width:100%;
-        -webkit-overflow-scrolling: touch;
+        white-space:normal;
     }
 }
